Stops wrapping in title

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -414,6 +414,7 @@ a {
     padding: 2px 10px;
     text-align: center;
     vertical-align: bottom;
+    white-space: nowrap;
 }
 
 .gitlens__image {
